# mtgdraftbots

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conan.py
emscripten/: README.md  mtgdraftbots.d.ts  package.json  pre.js
emscripten/browser/: MtgDraftBotsWasmBrowser.js  mtgdraftbots.js  mtgdraftbotsWorker.js
emscripten/mtgdraftbots/: mtgdraftbots.d.ts  mtgdraftbots.js  mtgdraftbotsWorker.js
emscripten/node/: MtgDraftBotsWasmNodeWorker.cjs  mtgdraftbots.js  mtgdraftbotsWorker.js
include/: mtgdraftbots.h
include/mtgdraftbots/: mtgdraftbots.h  mtgdraftbots.hpp  oracles.hpp  types.hpp
include/mtgdraftbots/details/: cardcost.hpp  cardvalues.hpp  constants.hpp  generate_probs.hpp  simd.hpp  types.hpp
src/: emscripten.cpp  parse_picks.cpp  temp.cpp
src/python/: generator.cpp
